--- a/TiltCodeManager/app/src/main/res/layout/activity_main.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_main.xml
@@ -3,87 +3,123 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:weightSum="5"
-        android:layout_height="match_parent">
+        android:background="@drawable/bg_main"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal">
+
+        <include layout="@layout/toolbar"/>
 
         <LinearLayout
-            android:layout_weight="3"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TiltCode"
-                android:layout_marginTop="30dp"
-                android:textSize="30dp"
-                android:layout_gravity="center_horizontal" />
-
-            <TextView
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="30dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="현재 남은 적립금 : 30,000p" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_weight="2"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="20dp"
-            android:weightSum="2"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:layout_weight="1"
-                android:orientation="horizontal"
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="등록"
-                    android:id="@+id/btn_main_register"/>
-
-                <Button
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="목록"
-                    android:id="@+id/btn_main_list"/>
-            </LinearLayout>
             <LinearLayout
-                android:layout_weight="1"
-                android:orientation="horizontal"
+                android:layout_marginTop="15dp"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_height="match_parent">
-                <Button
+
+
+                <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="결제"
-                    android:id="@+id/btn_main_purchase"/>
+                    android:layout_height="wrap_content">
+
+
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:layout_width="wrap_content"
+                        android:textSize="18dp"
+                        android:layout_height="wrap_content"
+                        android:text="쿠폰 등록"
+                        android:textColor="#b3ffff"
+                        />
+
+
+                    <TextView
+                        android:gravity="right|center_vertical"
+                        android:layout_marginTop="10dp"
+                        android:layout_width="match_parent"
+                        android:textSize="18dp"
+                        android:layout_height="wrap_content"
+                        android:text="정성민님"
+                        android:textColor="#b3ffff"
+                        />
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:textSize="18dp"
+                    android:layout_height="wrap_content"
+                    android:text="쿠폰 등록"
+                    android:textColor="#b3ffff"
+                    />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:hint="PW"
+                    android:ems="10"
+                    android:id="@+id/edt_setting_account_passwd_current" />
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:textSize="18dp"
+                    android:layout_height="wrap_content"
+                    android:text="새로운 비밀번호"
+                    android:textColor="#b3ffff"
+                    />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:hint="PW"
+                    android:ems="10"
+                    android:id="@+id/edt_setting_account_passwd" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:hint="Retype"
+                    android:ems="10"
+                    android:id="@+id/edt_setting_account_passwd_retype" />
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:textSize="18dp"
+                    android:layout_height="wrap_content"
+                    android:text="비밀번호가 일치합니다."
+                    android:id="@+id/tv_setting_account_pw_correct"
+                    android:textColor="#b3ffff"
+                    />
 
                 <Button
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="설정"
-                    android:id="@+id/btn_main_setting"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="New Button"
+                    android:id="@+id/btn_setting_account_passwd_proc"
+                    android:layout_gravity="center_horizontal" />
 
             </LinearLayout>
+            </ScrollView>
         </LinearLayout>
-
     </LinearLayout>
-
 </LinearLayout>
