--- a/TiltCodeManager/app/src/main/res/layout/activity_splash.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_splash.xml
@@ -7,21 +7,32 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#00abab"
+        android:background="@drawable/bg_splash"
         android:layout_gravity="center_horizontal">
-
-        <TextView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="TiltCode"
-            android:textSize="30dp"
-            android:id="@+id/textView"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center"
+            android:gravity="center">
+            <ImageView
+                android:layout_marginLeft="84dp"
+                android:layout_marginRight="84dp"
+                android:layout_marginTop="90dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/logo" />
+
+            <TextView
+                android:textSize="15dp"
+                android:textColor="#fefefe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Endless Possibilities with One Tilt"
+                android:layout_gravity="center_horizontal" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner" />
 </LinearLayout>
