--- a/TiltCodeManager/app/src/main/res/layout/activity_couponlist.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_couponlist.xml
@@ -30,7 +30,7 @@
                     android:clickable="true"
                     android:orientation="vertical"
                     android:layout_width="fill_parent"
-                    android:layout_height="40dp">
+                    android:layout_height="match_parent">
 
 
                 </LinearLayout>
