--- a/tiltcode/app/src/main/res/layout/fragment_tiltcode.xml
+++ b/tiltcode/app/src/main/res/layout/fragment_tiltcode.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/tilt"
+            android:src="@drawable/back"
             android:layout_gravity="center_horizontal" />
         <LinearLayout
             android:orientation="vertical"
