--- a/tiltcode/app/src/main/res/layout/item_setting_row.xml
+++ b/tiltcode/app/src/main/res/layout/item_setting_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tilt="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -19,7 +20,7 @@
             android:layout_gravity="center_horizontal">
 
 
-            <TextView
+            <com.tiltcode.tiltcode.View.TypedTextView
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -27,6 +28,7 @@
                 android:text="Settings"
                 android:textColor="#efefef"
                 android:textSize="25dp"
+                tilt:fonttype="yoon310"
                 android:id="@+id/tv_setting_row" />
 
             <TextView
