--- a/TiltCodeManager/app/src/main/res/layout/activity_setting.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_setting.xml
@@ -3,4 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:background="@drawable/bg_main"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal">
+
+        <include layout="@layout/toolbar"/>
+        <ListView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:divider="@null"
+            android:layout_height="match_parent"
+            android:id="@+id/lv_setting" />
+    </LinearLayout>
 </LinearLayout>
