--- a/TiltCodeManager/app/src/main/res/layout/fragment_policy.xml
+++ b/TiltCodeManager/app/src/main/res/layout/fragment_policy.xml
@@ -6,23 +6,31 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:background="#eeeeaa"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:background="#ffffff"
+            android:background="#b3ffff"
             android:layout_margin="15dp"
             android:orientation="vertical"
             android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:textSize="25dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/privacy_policy_nomal"
-                android:layout_gravity="center_horizontal" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:padding="5dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal" >
+
+                <TextView
+                    android:textSize="25dp"
+                    android:textColor="#000000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/privacy_policy_nomal"
+                    android:layout_gravity="center_horizontal" />
+            </ScrollView>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
