--- a/tiltcode/app/src/main/res/layout/activity_signup.xml
+++ b/tiltcode/app/src/main/res/layout/activity_signup.xml
@@ -4,12 +4,14 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:background="@drawable/bg_main"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal">
 
 
+        <include layout="@layout/toolbar"/>
         <LinearLayout
             android:orientation="vertical"
             android:layout_weight="1"
@@ -32,26 +34,34 @@
                 android:id="@+id/btn_signup_prev"
                 android:orientation="vertical"
                 android:layout_margin="2dp"
-                android:background="#efef00"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <TextView
                     android:layout_width="match_parent"
+                    android:textColor="#b3ffff"
                     android:layout_height="match_parent"
                     android:text="이전"
                     android:gravity="center" />
             </LinearLayout>
             <LinearLayout
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="1px"
+                android:background="#b3ffff"
+                android:layout_height="match_parent">
+
+            </LinearLayout>
+            <LinearLayout
                 android:id="@+id/btn_signup_next"
                 android:layout_margin="2dp"
-                android:background="#efef00"
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <TextView
+                    android:textColor="#b3ffff"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="다음"
